<resources>
    <string name="BrightYellow">Bright Yellow</string>
    <string name="DarkGray">Dark Gray</string>
    <string name="EspressoLibre">Espresso Libre</string>
    <string name="Idel">Idel</string>
    <string name="KFT2">KFT2</string>
    <string name="Modnokai_Coffee">Modnokai Coffee</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="abstract_">Abstract</string>
    <string name="adb_command">ADB Command</string>
    <string name="addToDictionary">Add to dictionary</string>
    <string name="add_filter">Add Filter</string>
    <string name="add_filter_ellipsis">Add Filter…</string>
    <string name="app_name">Java N-IDE</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_name">Application name</string>
    <string name="as_attachment">As Attachment</string>
    <string name="as_text">As Text</string>
    <string name="as_text_not_work">\"As text\" may not work due to the large amount of characters. Please try \"As attachment\"</string>
    <string name="auto_capitalize">Auto capitalize</string>
    <string name="auto_detection_encoding">Auto detection encoding</string>
    <string name="auto_indent">Auto Indent</string>
    <string name="auto_pair">Auto pair</string>
    <string name="auto_save">Auto save</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="build_success">Build success</string>
    <string name="button_purchase">Purchase</string>
    <string name="button_purchase_restore">Restore</string>
    <string name="can_not_be_empty">Can not be empty</string>
    <string name="can_not_create_folder">Can not create folder</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="checkbox_never_show_partial_select_help">"Don't show again"</string>
    <string name="classpath_desc">Classpath is a parameter in the Java Virtual Machine or the Java compiler that specifies the location of user-defined classes and packages. (android.jar)</string>
    <string name="clear">Clear</string>
    <string name="compiler_setting">Compiler setting</string>
    <string name="copy_right">"Copyright © 2016–2017 by Trần Lê Duy
All right reserve"</string>
    <string name="create_folder">Create folder</string>
    <string name="custom_symbol_list">Custom symbol list</string>
    <string name="default_classpath">default</string>
    <string name="default_value">Default</string>
    <string name="dialog_partial_select_explanation">1. Select the<b> first</b>" line.
2. Then select the"<b> last</b> line.</string>
    <string name="editor">Editor</string>
    <string name="editor_theme">Editor theme</string>
    <string name="enable_ime_keyboard">Enable IME keyboard</string>
    <string name="expand_all">Expand All</string>
    <string name="file">File</string>
    <string name="filter_by_name">Filter by Name</string>
    <string name="filter_text_colon">Filter text:</string>
    <string name="find_label">Find What:</string>
    <string name="font_size">Font Size</string>
    <string name="fullscreen_mode">Full screen Mode</string>
    <string name="highlight_and_theme">Highlight and Theme</string>
    <string name="highlight_the_file_size_limit">Limit highlight file size</string>
    <string name="home">Home</string>
    <string name="ime_desc">Allows your keyboard to show hints.</string>
    <string name="insert_space_for_tab">Insert space for Tab</string>
    <string name="java_for_android">Java for Android</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="key_classpath">pref_key_classpath</string>
    <string name="key_format_type">key_format_type</string>
    <string name="key_ime_keyboard">key_ime_keyboard</string>
    <string name="key_max_page">key_max_tab</string>
    <string name="key_pref_source_compatibility">key_pref_source_compatibility</string>
    <string name="key_pref_source_encoding">key_pref_source_encoding</string>
    <string name="key_pref_target_compatibility">key_pref_target_compatibility</string>
    <string name="keyboard">Keyboard</string>
    <string name="log_level">Log Level</string>
    <string name="log_level_colon">Log level:</string>
    <string name="log_level_value_verbose">V</string>
    <string name="logcat">Logcat</string>
    <string name="logo">Logo</string>
    <string name="manage_saved_logs">Manage Saved Logs</string>
    <string name="max_page">Max page editor</string>
    <string name="max_page_desc">Number of maximum page display on the screen</string>
    <string name="menu_title_partial_select">Save Partial</string>
    <string name="open">Open</string>
    <string name="other">Other</string>
    <string name="paste">Paste</string>
    <string name="pause_unpause">Play/Pause</string>
    <string name="pref_auto_capitalize">pref_auto_capitalize</string>
    <string name="pref_auto_complete">pref_auto_complete</string>
    <string name="pref_auto_indent">pref_auto_indent</string>
    <string name="pref_auto_pair">pref_auto_pair</string>
    <string name="pref_auto_save">pref_auto_save</string>
    <string name="pref_buffer">buffer</string>
    <string name="pref_buffer_choice_main_value">main</string>
    <string name="pref_buffer_title">Log Buffer(s)</string>
    <string name="pref_cat_advanced">Advanced</string>
    <string name="pref_cat_appearance">Appearance</string>
    <string name="pref_cat_configuration">Configuration</string>
    <string name="pref_default_log_level">default_level</string>
    <string name="pref_default_log_level_title">Default Log Level</string>
    <string name="pref_desc_auto_pair">Auto add close bracket, e.g. when you type { editor will be auto add }</string>
    <string name="pref_display_limit">display_limit</string>
    <string name="pref_display_limit_default">10000</string>
    <string name="pref_display_limit_summary">Show only the last %1$d logs, to avoid OutOfMemoryErrors. (Default: %2$s)</string>
    <string name="pref_display_limit_title">Log Display Limit</string>
    <string name="pref_expanded_by_default">expand_default</string>
    <string name="pref_expanded_by_default_summary">Show full log text by default.</string>
    <string name="pref_expanded_by_default_title">Expand by Default</string>
    <string name="pref_font_size">pref_font_size</string>
    <string name="pref_highlight_file_size_limit">pref_highlight_file_size_limit</string>
    <string name="pref_insert_space_for_tab">pref_insert_space_for_tab</string>
    <string name="pref_keep_screen_on">pref_keep_screen_on</string>
    <string name="pref_key_fullscreen">pref_key_fullscreen</string>
    <string name="pref_log_line_period">log_line_period</string>
    <string name="pref_log_line_period_default">200</string>
    <string name="pref_log_line_period_summary">When recording, write to SD card every %1$d line(s) (default: %2$s).</string>
    <string name="pref_log_line_period_title">Write Period</string>
    <string name="pref_remember_last_opened_files">pref_remember_last_opened_files</string>
    <string name="pref_screen_orientation">pref_screen_orientation</string>
    <string name="pref_show_linenumber">pref_show_linenumber</string>
    <string name="pref_show_timestamp">show_timestamp</string>
    <string name="pref_show_timestamp_summary">Show process id and timestamp when expanded.</string>
    <string name="pref_show_timestamp_title">Show Pid &amp; Timestamp</string>
    <string name="pref_show_whitespace">pref_show_whitespace</string>
    <string name="pref_symbol">pref_symbol</string>
    <string name="pref_tab_size">pref_tab_size</string>
    <string name="pref_text_size">text_size</string>
    <string name="pref_text_size_title">Text Size</string>
    <string name="pref_title_java_format_type">Format type</string>
    <string name="pref_touch_to_adjust_text_size">pref_touch_to_adjust_text_size</string>
    <string name="pref_volume_move">pref_volume_move</string>
    <string name="pref_word_wrap">pref_word_wrap</string>
    <string name="regex">Regex</string>
    <string name="remember_last_opened_files">Remember last opened files</string>
    <string name="remember_last_opened_files_summary">Auto open last opened files when startup</string>
    <string name="replace">Replace</string>
    <string name="replace_label">Replace With:</string>
    <string name="report_bug">Report bug</string>
    <string name="reset">Reset term</string>
    <string name="sample_code_java">Java sample code</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="scrubber">Omit sensitive info</string>
    <string name="scrubber_summary">Omit sensitive info like web urls, phone numbers or emails</string>
    <string name="search">Search</string>
    <string name="send_log">Send</string>
    <string name="settings">Settings</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="show_linenumber">Show Linenumber</string>
    <string name="show_whitespace">Show Whitespace</string>
    <string name="sort_by_datetime">Sort by Date</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="sort_by_type">Sort by Type</string>
    <string name="start_recording_log">Record</string>
    <string name="tab_size">Tab size</string>
    <string name="text_size_medium_value">M</string>
    <string name="title_filters">Filters</string>
    <string name="touch_to_adjust_text_size">Touch to change text size</string>
    <string name="user_interface">User interface</string>
    <string name="whole_words_only">Whole words only</string>
    <string name="word_wrap_in_editor">Wordwrap</string>
</resources>