<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/editor">
        <com.jecelyin.editor.v2.preference.FontSizePreference
            android:title="@string/font_size"
            android:key="@string/pref_font_size"
            android:summary="@string/default_value" />
        <CheckBoxPreference
            android:title="@string/touch_to_adjust_text_size"
            android:key="@string/pref_touch_to_adjust_text_size"
            android:summary="Change font size (Zoom) with two finger" />
        <CheckBoxPreference
            android:title="@string/word_wrap_in_editor"
            android:key="@string/pref_word_wrap"
            android:summary="Use soft wrap in editor" />
        <CheckBoxPreference
            android:title="@string/show_linenumber"
            android:key="@string/pref_show_linenumber" />
        <CheckBoxPreference
            android:title="@string/show_whitespace"
            android:key="@string/pref_show_whitespace" />
        <CheckBoxPreference
            android:title="Auto complete"
            android:key="@string/pref_auto_complete"
            android:summary="Show small popup to suggest code when you typing. It can be not supported current language"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:title="@string/auto_indent"
            android:key="@string/pref_auto_indent" />
        <CheckBoxPreference
            android:title="@string/auto_pair"
            android:key="@string/pref_auto_pair"
            android:summary="@string/pref_desc_auto_pair" />
        <CheckBoxPreference
            android:title="@string/insert_space_for_tab"
            android:key="@string/pref_insert_space_for_tab" />
        <EditTextPreference
            android:singleLine="true"
            android:maxLength="1"
            android:title="@string/tab_size"
            android:key="@string/pref_tab_size"
            android:summary="4"
            android:inputType="number" />
        <CheckBoxPreference
            android:title="@string/auto_capitalize"
            android:key="@string/pref_auto_capitalize"
            android:summary="Not recommend" />
        <EditTextPreference
            android:scrollbars="vertical"
            android:maxLines="7"
            android:title="@string/custom_symbol_list"
            android:key="@string/pref_symbol"
            android:negativeButtonText="@string/reset" />
        <CheckBoxPreference
            android:title="Volume move"
            android:key="@string/pref_volume_move"
            android:summary="Press volume up (+) to move cursor to right, press volume down (-) to move cursor to left"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/highlight_and_theme">
        <CheckBoxPreference
            android:checked="false"
            android:title="@string/fullscreen_mode"
            android:key="@string/pref_key_fullscreen" />
        <EditTextPreference
            android:singleLine="true"
            android:title="@string/highlight_the_file_size_limit"
            android:key="@string/pref_highlight_file_size_limit"
            android:summary="500 KB"
            android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/other">
        <CheckBoxPreference
            android:title="@string/auto_save"
            android:key="@string/pref_auto_save"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:title="@string/remember_last_opened_files"
            android:key="@string/pref_remember_last_opened_files"
            android:summary="@string/remember_last_opened_files_summary" />
        <com.jecelyin.editor.v2.preference.JecListPreference
            android:entries="@array/screen_orientation"
            android:title="@string/screen_orientation"
            android:key="@string/pref_screen_orientation"
            android:entryValues="@array/screen_orientation_values" />
        <CheckBoxPreference
            android:title="@string/keep_screen_on"
            android:key="@string/pref_keep_screen_on" />
    </PreferenceCategory>
</PreferenceScreen>