<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16.0dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@id/find_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/find_label" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@id/replace_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replace" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@id/replace_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/replace_label" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@id/case_sensitive_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/case_sensitive" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@id/whole_words_only_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whole_words_only" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@id/regex_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regex" />
    </LinearLayout>
</ScrollView>