<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textSize="12.0sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_text_colon"
        android:maxLines="1" />
    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/dialog_new_filter" />
    <TextView
        android:textSize="12.0sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_level_colon"
        android:maxLines="1" />
    <Spinner
        android:id="@id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/log_level" />
</LinearLayout>