<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textSize="16.0sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_partial_select_explanation" />
    <ImageView
        android:paddingTop="8.0dip"
        android:paddingBottom="8.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_title_partial_select"
        app:srcCompat="@drawable/partial_select_image_cropped" />
    <CheckBox
        android:id="@android:id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_never_show_partial_select_help" />
</LinearLayout>