<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView
            android:layout_gravity="center"
            android:id="@id/imageView"
            android:layout_width="120.0dip"
            android:layout_height="120.0dip"
            android:src="@mipmap/icon"
            android:contentDescription="@string/logo" />
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?colorAccent"
            android:padding="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java_for_android" />
        <ProgressBar
            android:id="@id/progressBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:progressBarStyleSmall" />
    </LinearLayout>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_right" />
</LinearLayout>